--- a/index.html
+++ b/index.html
@@ -1,11 +1,85 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="shortcut icon" href="img/logo.png" type="image/x-icon" style="width:142px;height:142px;border:0;>
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-   <h1>hello</h1> 
+    <header>
+
+    </header>
+    <nav>
+        <ul>
+            <li><a href="home">Головна</a>
+            </li>
+            <li><a href="delivery">Доставка</a>
+            </li>
+            <li><a href="payment">Оплата</a>
+            </li>
+            <li><a href="contact">Контакти</a>
+            </li>
+            <li><a href="basket">Кошик</a>
+            </li>
+        </ul>
+    </nav>
+    <form>
+        <label for="search">Пошук</label>
+        <input type="search" id="search" name="search">
+    </form>
+    <select id="lang" name="lang">
+        <option value="ua">UA</option>
+        <option value="eng">ENG</option>
+        <option value="ru">RU</option>
+    </select>
+    <main>
+    <section id=info>
+        <img src="img/logo_sqr.png" alt="logo">
+        <h3>Ексклюзивні сорти рослин для вашого саду</h3>
+        <h3>Замовлення рослин</h3>
+        <h3>(068)-330-78-78</h3>
+        <a href="https://www.instagram.com/_vsi.v.sad_/">
+            <img src="/img/logo_sqr.png" alt="instagram" style="width:50px;height:50px;border:0;">
+        </a>
+        <a href="https://www.facebook.com/vsivsadua/">
+            <img src="/img/logo_sqr.png" alt="facebook" style="width:50px;height:50px;border:0;">
+        </a>
+        <a href="https://www.facebook.com/vsivsadua/">
+            <img src="/img/logo_sqr.png" alt="facebook" style="width:50px;height:50px;border:0;">
+        </a>
+        <a href="https://www.instagram.com/_vsi.v.sad_/">in</a> 
+        <button onclick="viber = 'https://www.instagram.com/_vsi.v.sad_/'">viber</button>
+        <button onclick="facebook = 'https://www.facebook.com/vsivsadua/'">fb</button>
+        <button onclick="email = 'https://www.facebook.com/vsivsadua/'">fb</button>
+    </section>
+    <nav>
+        <ul>
+            <li><a href="all">Всі</a>
+            </li>
+            <li><a href="roses">Троянди</a>
+            </li>
+            <li><a href="chrysantemum">Хризантеми</a>
+            </li>
+            <li><a href="peonies">Півонії</a>
+            </li>
+            <li><a href="iris">Іриси</a>
+            </li>
+            <li><a href="sukkulent">Сукуленти</a>
+            </li>
+            <li><a href="exotic">Екзотичні рослини</a>
+            </li>
+            <li><a href="houseplants">Кімнатні</a>
+            </li>
+            <li><a href="other">Інші</a>
+            </li>
+        </ul>
+    </nav> 
+    <section id=favorites>
+
+    </section>
+
+    </main>
 </body>
 </html>
