--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="shortcut icon" href="img/logo.png" type="image/x-icon" style="width:142px;height:142px;border:0;>
+    <link rel="shortcut icon" href="img/logo.png" type="image/x-icon" style="width:142px;height:142px;border:0;">
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
