--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 </head>
 <body>
     <header>
-
+        <div id="logo" class="slogan">
+            <!-- <img src="img/rose_rt.png" alt="logo" type="image">     -->
+            <h1> Ексклюзивні сорти рослин для вашого саду</h1>
+        </div> 
         <nav>
-            <ul class="top-menu">
+            <ul class="topmenu">
                 <li><a href="home">Головна</a>
                 </li>
                 <li><a href="delivery">Доставка</a>
@@ -23,37 +26,41 @@
                 </li>
                 <li><a href="basket">Кошик</a>
                 </li>
+                <li>
+                    <form class="search">
+                        <label for="search">Пошук:</label>
+                        <input type="search" id="search" name="search">
+                    </form>  
+                </li>
             </ul>
-        </nav> 
-        <section id="search">
-            <form>
-                <label for="search">Пошук</label>
-                <input type="search" id="search" name="search">
-            </form>  
-        </section>
+        </nav>      
+        <div id="present">
+        <!-- <h1>Всі в сад</h1>      -->
+        <p class="title"> Ексклюзивні сорти рослин <br> для вашого саду<br>
+        Замовлення рослин <br> (068)-330-78-78<br>
+        Консультації по догляду <br> (068)-780-38-38<br>
+        vsivsad@gmail.com
+        </p>  
+        </div>
     </header>
+
     <main>
-        <img src="img/logo_sqr.png" alt="logo"type="image"> 
-        <p>Ексклюзивні сорти рослин для вашого саду<br>
-        Замовлення рослин (068)-330-78-78<br>
-        Консультації по догляду (068)-780-38-38<br>
-        vsivsad@gmail.com</p>
-        <br>
         <section id="info">
-            <img src="img/logo_sqr.png" alt="logo"type="image">  
+            <!-- <img src="img/rose_sq.png" alt="logo"type="image">   -->
             <a href="https://www.instagram.com/_vsi.v.sad_/">
-            <img src="img/logo_sqr.png" alt="instagram">
+            <!-- <img src="img/rose_sq.png" alt="instagram"> -->
             </a>
             <a href="https://www.facebook.com/vsivsadua/">
-            <img src="img/logo_sqr.png" alt="facebook">
+            <!-- <img src="img/rose_sq.png" alt="facebook"> -->
             </a>
             <a href="https://www.facebook.com/vsivsadua/">
-            <img src="img/logo_sqr.png" alt="facebook">
+            <!-- <img src="img/rose_sq.png" alt="facebook"> -->
             </a>
-            <a href="https://www.instagram.com/_vsi.v.sad_/">in</a> 
-        </section id="categories">
+            <a href="https://www.instagram.com/_vsi.v.sad_/">
+            </a> 
+        </section>
         <nav>
-            <ul>
+            <ul class="category">
                 <li><a href="all">Всі</a>
                 </li>
                 <li><a href="roses">Троянди</a>
