--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <img src="img/abraham_darby.png" alt="abraham derby rose" style="width:450px;height:350px;border:0;">
         <p>[001] Abraham Derby 150 грн./шт.</p>
         <h3>кількість саджанців</h3>
-        <select id="numb" name="numb">
+        <select id="001" name="numb">
             <option value="1">1</option>
             <option value="2">2</option>
             <option value="3">3</option>
@@ -97,7 +97,7 @@
          <img src="img/belvedere.png" alt="belvedere rose" style="width:450px;height:350px;border:0;">
          <p>[002] Belvedere 150 грн./шт.</p>
          <h3>кількість саджанців</h3>
-         <select id="numb" name="numb">
+         <select id="002" name="numb">
              <option value="1">1</option>
              <option value="2">2</option>
              <option value="3">3</option>
@@ -116,7 +116,7 @@
         <img src="img/delicia.png" alt="delicia rose" style="width:450px;height:350px;border:0;">
          <p>[003] Delicia 150 грн./шт.</p>
          <h3>кількість саджанців</h3>
-         <select id="numb" name="numb">
+         <select id="003" name="numb">
              <option value="1">1</option>
              <option value="2">2</option>
              <option value="3">3</option>
@@ -135,7 +135,7 @@
           <img src="img/eden_rose.png" alt="eden rose" style="width:450px;height:350px;border:0;">
           <p>[004] Eden Rose 150 грн./шт.</p>
           <h3>кількість саджанців</h3>
-          <select id="numb" name="numb">
+          <select id="004" name="numb">
               <option value="1">1</option>
               <option value="2">2</option>
               <option value="3">3</option>
@@ -154,7 +154,7 @@
         <img src="img/eric_tabarly.png" alt="eric eric_tabarly rose" style="width:450px;height:350px;border:0;">
         <p>[005] Eric Tabarly 150 грн./шт.</p>
         <h3>кількість саджанців</h3>
-        <select id="numb" name="numb">
+        <select id="005" name="numb">
             <option value="1">1</option>
             <option value="2">2</option>
             <option value="3">3</option>
@@ -173,7 +173,7 @@
         <img src="img/ferdi.png" alt="ferdi rose" style="width:450px;height:350px;border:0;">
          <p>[006] Ferdi 150 грн./шт.</p>
          <h3>кількість саджанців</h3>
-         <select id="numb" name="numb">
+         <select id="006" name="numb">
              <option value="1">1</option>
              <option value="2">2</option>
              <option value="3">3</option>
@@ -192,7 +192,7 @@
          <img src="img/graham_thomas.png" alt="graham graham_thomas rose" style="width:450px;height:350px;border:0;">
          <p>[007] Graham Thomas 150 грн./шт.</p>
          <h3>кількість саджанців</h3>
-         <select id="numb" name="numb">
+         <select id="007" name="numb">
              <option value="1">1</option>
              <option value="2">2</option>
              <option value="3">3</option>
@@ -211,7 +211,7 @@
         <img src="img/heritage.png" alt="heritage rose" style="width:450px;height:350px;border:0;">
         <p>[008] Heritage 150 грн./шт.</p>
         <h3>кількість саджанців</h3>
-        <select id="numb" name="numb">
+        <select id="008" name="numb">
             <option value="1">1</option>
             <option value="2">2</option>
             <option value="3">3</option>
@@ -230,7 +230,7 @@
         <img src="img/jalitah.png" alt="jalitah rose" style="width:450px;height:350px;border:0;">
         <p>[009] Jalitah 150 грн./шт.</p>
         <h3>кількість саджанців</h3>
-        <select id="numb" name="numb">
+        <select id="009" name="numb">
             <option value="1">1</option>
             <option value="2">2</option>
             <option value="3">3</option>
@@ -249,7 +249,7 @@
         <img src="img/lions.png" alt="lions rose" style="width:450px;height:350px;border:0;">
         <p>[010] Lions 150 грн./шт.</p>
         <h3>кількість саджанців</h3>
-        <select id="numb" name="numb">
+        <select id="010" name="numb">
             <option value="1">1</option>
             <option value="2">2</option>
             <option value="3">3</option>
@@ -268,7 +268,7 @@
         <img src="img/lord_byron.png" alt="lord_byron rose" style="width:450px;height:350px;border:0;">
         <p>[011] Lord Byron 150 грн./шт.</p>
         <h3>кількість саджанців</h3>
-        <select id="numb" name="numb">
+        <select id="011" name="numb">
             <option value="1">1</option>
             <option value="2">2</option>
             <option value="3">3</option>
@@ -287,7 +287,7 @@
         <img src="img/othello.png" alt="othello rose" style="width:450px;height:350px;border:0;">
         <p>[012] Othello 150 грн./шт.</p>
         <h3>кількість саджанців</h3>
-        <select id="numb" name="numb">
+        <select id="012" name="numb">
             <option value="1">1</option>
             <option value="2">2</option>
             <option value="3">3</option>
@@ -306,7 +306,7 @@
             <img src="img/parole.png" alt="parole rose" style="width:450px;height:350px;border:0;">
             <p>[013] Parole 150 грн./шт.</p> 
             <h3>кількість саджанців</h3>
-            <select id="numb" name="numb">
+            <select id="013" name="numb">
                 <option value="1">1</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
@@ -325,7 +325,7 @@
             <img src="img/pat_austin.png" alt="pat austin rose" style="width:450px;height:350px;border:0;">
             <p>[014] Pat Austin 150 грн./шт.</p>
             <h3>кількість саджанців</h3>
-            <select id="numb" name="numb">
+            <select id="014" name="numb">
                 <option value="1">1</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
@@ -344,7 +344,7 @@
              <img src="img/peace_gloria.png" alt="peace_gloria rose" style="width:450px;height:350px;border:0;">
         <p>[015] Peace Gloria 150 грн./шт.</p>
         <h3>кількість саджанців</h3>
-        <select id="numb" name="numb">
+        <select id="015" name="numb">
             <option value="1">1</option>
             <option value="2">2</option>
             <option value="3">3</option>
@@ -363,7 +363,7 @@
          <img src="img/polka.png" alt="polka rose" style="width:450px;height:350px;border:0;">
          <p>[016] Polka 150 грн./шт.</p>
          <h3>кількість саджанців</h3>
-         <select id="numb" name="numb">
+         <select id="016" name="numb">
              <option value="1">1</option>
              <option value="2">2</option>
              <option value="3">3</option>
@@ -382,7 +382,7 @@
           <img src="img/pomponella.png" alt="pomponella rose" style="width:450px;height:350px;border:0;">
           <p>[017] Pomponella 150 грн./шт.</p>
           <h3>кількість саджанців</h3>
-          <select id="numb" name="numb">
+          <select id="017" name="numb">
               <option value="1">1</option>
               <option value="2">2</option>
               <option value="3">3</option>
@@ -401,7 +401,7 @@
            <img src="img/ranunkula.png" alt="ranunkula rose" style="width:450px;height:350px;border:0;">
            <p>[019] Ranunkula 150 грн./шт.</p>
            <h3>кількість саджанців</h3>
-           <select id="numb" name="numb">
+           <select id="019" name="numb">
                <option value="1">1</option>
                <option value="2">2</option>
                <option value="3">3</option>
@@ -420,7 +420,7 @@
             <img src="img/rugelda.png" alt="rugelda rose" style="width:450px;height:350px;border:0;">
             <p>[020] Rugelda 150 грн.</p>
             <h3>кількість саджанців</h3>
-            <select id="numb" name="numb">
+            <select id="020" name="numb">
                 <option value="1">1</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
@@ -439,7 +439,7 @@
              <img src="img/shropshire_lad.png" alt="shropshire_lad rose" style="width:450px;height:350px;border:0;">
         <p>[021] Shropshire Lad 150 грн.</p>
         <h3>кількість саджанців</h3>
-        <select id="numb" name="numb">
+        <select id="021" name="numb">
             <option value="1">1</option>
             <option value="2">2</option>
             <option value="3">3</option>
@@ -458,7 +458,7 @@
          <img src="img/sparkling_ruffles.png" alt="sparkling_ruffles rose" style="width:450px;height:350px;border:0;">
          <p>[022] Sparling Ruffles 150 грн.</p>
          <h3>кількість саджанців</h3>
-         <select id="numb" name="numb">
+         <select id="022" name="numb">
              <option value="1">1</option>
              <option value="2">2</option>
              <option value="3">3</option>
@@ -477,7 +477,7 @@
           <img src="img/summer_song.png" alt="summer_song rose" style="width:450px;height:350px;border:0;">
           <p>[023] Summer Song 150 грн.</p>
           <h3>кількість саджанців</h3>
-          <select id="numb" name="numb">
+          <select id="023" name="numb">
               <option value="1">1</option>
               <option value="2">2</option>
               <option value="3">3</option>
@@ -496,7 +496,7 @@
            <img src="img/wedding_piano.png" alt="wedding_piano rose" style="width:450px;height:350px;border:0;">
            <p>[024] Wedding Piano 150 грн./шт.</p> 
            <h3>кількість саджанців</h3>
-           <select id="numb" name="numb">
+           <select id="024" name="numb">
                <option value="1">1</option>
                <option value="2">2</option>
                <option value="3">3</option>
