--- a/index.html
+++ b/index.html
@@ -45,20 +45,20 @@
     </header>
 
     <main>
-        <section id="info">
+        <!-- <section id="info"> -->
             <!-- <img src="img/rose_sq.png" alt="logo"type="image">   -->
-            <a href="https://www.instagram.com/_vsi.v.sad_/">
+            <!-- <a href="https://www.instagram.com/_vsi.v.sad_/"> -->
             <!-- <img src="img/rose_sq.png" alt="instagram"> -->
-            </a>
-            <a href="https://www.facebook.com/vsivsadua/">
+            <!-- </a>
+            <a href="https://www.facebook.com/vsivsadua/"> -->
             <!-- <img src="img/rose_sq.png" alt="facebook"> -->
-            </a>
-            <a href="https://www.facebook.com/vsivsadua/">
+            <!-- </a>
+            <a href="https://www.facebook.com/vsivsadua/"> -->
             <!-- <img src="img/rose_sq.png" alt="facebook"> -->
-            </a>
+            <!-- </a>
             <a href="https://www.instagram.com/_vsi.v.sad_/">
             </a> 
-        </section>
+        </section> -->
         <nav>
             <ul class="category">
                 <li><a href="all">Всі</a>
@@ -526,7 +526,7 @@
             Прізвище:
             <input type="text" placeholder="Прізвище" required>
         </label>
-        <label>
+        <!-- <label>
                 <label for="phone_num">Номер телефону:</label>
                 <input type="text" id="phone_num" name="phone_num"
                 pattern="[0-9]+[0-9]+[0-9]+[0-9]{3}" title="Three letter country code"><br><br>
@@ -536,7 +536,7 @@
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email"
                 pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$">
-        </label>
+        </label> -->
         <br>
         <br>
         <label>Оберіть, будь-ласка, спосіб доставки:</label>
