--- a/basket.html
+++ b/basket.html
@@ -17,6 +17,7 @@
         <form action="https://formspree.io/meqkkdlr" method="POST">
             <div id="container">
             </div>
+            <input type="email" placeholder="Адреса зворотнього звязку" name="contact_mail">
             <input type="submit" value="Замовити">
         </form>
     </header>
