--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <a href="https://www.instagram.com/_vsi.v.sad_/">
             </a> 
         </section> -->
-        <nav>
+        <!-- <nav>
             <ul class="category">
                 <li><a href="all">Всі</a>
                 </li>
@@ -74,7 +74,7 @@
                 <li><a href="other">Інші</a>
                 </li>
             </ul>
-        </nav>
+        </nav> -->
         <br>
         <div id="content"></div>
         <footer>
@@ -118,12 +118,12 @@
             </fieldset>
             <br>
             <br>
-            <label>Щось іще може:</label>
+            <!-- <label>Щось іще може:</label>
             <fieldset id="group3">
                 <input type="radio" name="group3" value="straight"><label>нуі</label>
                 <input type="radio" name="group3" value="curly"><label>ппп</label>
                 <input type="radio" name="group3" value="gray"><label>ммм</label>
-            </fieldset>
+            </fieldset> -->
             <br>
             <label>Ваші зауваження і побажання</label>
             <br>
